internal/fixtures/architecture/negative/unknown-deepwork-import/apps/web/src/bad.ts
import { value } from "@deepwork/unknown";

export const forbidden = value;
